Diseño Inicial Done

--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,20 @@
 					<strong class="About-Card-Question"> - ¿Dónde quieres Trabajar?</strong>
 				</div>
 			</section>
+			<section class="Proyects">
+				<h2 class="Proyects-Title">Proyectos</h2>
+				<div class="Proyects-Cards-Container">
+					<div class="Proyects-Card">
+						<img src="./icons/Proyecto-React-Navigation3.webp" alt="Proyecto React Navigation" class="Proyects-Card-Image">
+					</div>
+					<div class="Proyects-Card">
+						<img src="./icons/imagen-proyecto-desarrollo-web.webp" alt="Proyecto Desarrollo Web" class="Proyects-Card-Image">
+					</div>
+				</div>
+			</section>
 		</div>
+		<footer>
+			<p>Hecho con ❤ por <a href="https://twitter.com/luisoteko">@luisoteko</a></p>
+		</footer>
 	</body>
 </html>
