--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 					<p class="About-Card-Description">Aquí puedes escribir algo bien chido sobre tí, lo que te gusta y lo que no. Los
 						lugares que quieres conocer o la
 						comida que más disfrutas, incluso puedes hablar de tus macotas.</p>
-					<strong class="About-Card-Question"> - ¿Dónde quieres Trabajar?</strong>
+					<strong class="About-Card-Question">- ¿Dónde quieres Trabajar?</strong><br>
+					<strong class="About-Card-Question">&nbsp;&nbsp;&nbsp;-Platzi estaria genial💚</strong>
 				</div>
 			</section>
 			<section class="Proyects">
