--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 			<div class="Cohete-Container">
 				<img src="./icons/rocket.png" alt="cohete" class="Cohete">
 			</div>
-			<section class="About">
+			<section class="About" id="About">
 				<h2 class="About-Title">Sobre mí</h2>
 				<div class="About-Card">
 					<p class="About-Card-Description">Aquí puedes escribir algo bien chido sobre tí, lo que te gusta y lo que no. Los
@@ -83,7 +83,7 @@
 					<strong class="About-Card-Question">&nbsp;&nbsp;&nbsp;-Platzi estaria genial💚</strong>
 				</div>
 			</section>
-			<section class="Proyects">
+			<section class="Proyects" id="Portafolio">
 				<div class="Proyects-Title-Container">
 					<h2 class="Proyects-Title">Proyectos</h2>
 				</div>
